--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head> </head>
   <body style="width: 100vw; height: 100vh;">
     <div style="display: flex;">
-      <div style="width: 100px;">
-        <span id="gen"></span>
-        <span id="minSteps"></span><br />
-        <p id="champIds"></p>
+      <div style="width: 200px;">
+        Generation: <span id="gen" style="padding: 10px"></span>
+        <div id="steps" style="width: 120px; display: flex;">
+        </div>
       </div>
       <div style="width: 800px;">
         <canvas
@@ -17,6 +17,6 @@
         ></canvas>
       </div>
     </div>
-    <script src="bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
